@@ -57,6 +57,8 @@ TODO: cursor over overlays, when focus change?
           as mouse reporting.
         - redundantly clear mouse reporting and a few other states in
           tput init/tput reset, for older urxvts.
+        - partial/full clear screens did cause flickering and possibly pixel
+          droppings when urxvt viewed the scorllback buffer.
 
 9.05 Sun Jun 15 20:09:20 CEST 2008
 	- new option --cd/chdir to set the starting working directory.
